[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meok-mcp-injection-scan-mcp"
version = "1.0.6"
description = "MCP injection / prompt-poisoning / SSRF scanner. 30+ canonical rules covering the April 2026 Anthropic MCP RCE class, mcp-server-git CVE chain, DockerDash injection chain, OWASP LLM Top 10 + GenAI Red Team v1. Scans live MCP /tools/list endpoints OR pasted JSON. Free 5/day, Pro £29/mo for unlimited + signed safety reports auditors and procurement accept. By MEOK AI Labs."
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "MEOK AI Labs", email = "nicholas@meok.ai"}]
keywords = ["mcp", "security", "prompt-injection", "tool-poisoning", "ssrf", "supply-chain", "owasp-llm-top-10", "anthropic-mcp-rce-2026", "signed-attestation", "meok-ai-labs"]
classifiers = ["Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent", "Topic :: Security"]
dependencies = ["mcp>=1.0.0"]

[project.urls]
Homepage = "https://meok.ai/meok-mcp-injection-scan-mcp"
Repository = "https://github.com/CSOAI-ORG/meok-mcp-injection-scan-mcp"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]

[project.scripts]
meok-mcp-injection-scan-mcp = "server:main"

[tool.mcp]
mcpName = "io.github.CSOAI-ORG/meok-mcp-injection-scan-mcp"
